test/integration/bad/embedded_laplace/stanc.expected
  $ ../../../../../install/default/bin/stanc autodiff_incompatibility1.stan
Semantic error in 'autodiff_incompatibility1.stan', line 67, column 29 to column 40:
   -------------------------------------------------
    65:    eta ~ normal(0, 1);
    66:  
    67:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    68:                                    theta_0,
    69:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

The function 'algebra_solver', called by this likelihood function,
does not currently support higher-order derivatives, and
cannot be used in an embedded Laplace approximation.
[exit 1]
  $ ../../../../../install/default/bin/stanc autodiff_incompatibility2.stan
Semantic error in 'autodiff_incompatibility2.stan', line 75, column 43 to column 54:
   -------------------------------------------------
    73:  
    74:  generated quantities {
    75:    vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
                                                    ^
    76:                          theta_0,
    77:                          K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

The function 'ode_rk45', called by this likelihood function,
does not currently support higher-order derivatives, and
cannot be used in an embedded Laplace approximation.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback1.stan
Semantic error in 'bad_callback1.stan', line 49, column 29 to column 40:
   -------------------------------------------------
    47:    eta ~ normal(0, 1);
    48:  
    49:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    50:                                    theta_0,
    51:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Function 'll_function' does not have a valid signature for use in 'laplace_marginal':
Expected function returning real but got function returning void.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback2.stan
Semantic error in 'bad_callback2.stan', line 50, column 29 to column 49:
   -------------------------------------------------
    48:    eta ~ normal(0, 1);
    49:  
    50:    target += laplace_marginal(ll_function_jacobian, (eta, log_ye, y),
                                      ^
    51:                                    theta_0,
    52:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Function 'll_function_jacobian' does not have a valid signature for use in 'laplace_marginal':
Expected a pure function but got a _jacobian function.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback3.stan
Semantic error in 'bad_callback3.stan', line 41, column 29 to column 40:
   -------------------------------------------------
    39:  
    40:    real ll_function;
    41:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    42:                                    theta_0,
    43:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

A returning function was expected but a non-function value 'll_function' was supplied.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback4.stan
Semantic error in 'bad_callback4.stan', line 49, column 29 to column 40:
   -------------------------------------------------
    47:    eta ~ normal(0, 1);
    48:  
    49:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    50:                                    theta_0,
    51:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Function 'll_function' does not have a valid signature for use in 'laplace_marginal':
The first argument is marked data-only. (Local variables are assumed to
depend on parameters; same goes for function inputs unless they are marked
with the keyword 'data'.)
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_callback5.stan
Semantic error in 'bad_callback5.stan', line 49, column 29 to column 40:
   -------------------------------------------------
    47:    eta ~ normal(0, 1);
    48:  
    49:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                                      ^
    50:                                    theta_0,
    51:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Function 'll_function' does not have a valid signature for use in 'laplace_marginal':
The first argument must be vector but got complex_vector.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward1.stan
Semantic error in 'bad_forward1.stan', line 49, column 42 to column 47:
   -------------------------------------------------
    47:    eta ~ normal(0, 1);
    48:  
    49:    target += laplace_marginal(ll_function, {2.0},
                                                   ^
    50:                                    theta_0,
    51:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Forwarded arguments to 'll_function' in call to 'laplace_marginal' must be a tuple.
Instead found type array[] real.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward2.stan
Semantic error in 'bad_forward2.stan', line 49, column 42 to column 58:
   -------------------------------------------------
    47:    eta ~ normal(0, 1);
    48:  
    49:    target += laplace_marginal(ll_function, (eta, y, log_ye),
                                                   ^
    50:                                    theta_0,
    51:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Cannot call 'll_function' with arguments forwarded from call to
'laplace_marginal':
The second argument (excluding the latent gaussian vector argument) must be
vector but got array[] int.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward3.stan
Semantic error in 'bad_forward3.stan', line 49, column 42 to column 50:
   -------------------------------------------------
    47:    eta ~ normal(0, 1);
    48:  
    49:    target += laplace_marginal(ll_function, (eta, y),
                                                   ^
    50:                                    theta_0,
    51:                                    K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

Cannot call 'll_function' with arguments forwarded from call to
'laplace_marginal':
Expected 3 arguments (excluding the latent gaussian vector argument)
but got 2 arguments.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward4.stan
Semantic error in 'bad_forward4.stan', line 51, column 46 to column 71:
   -------------------------------------------------
    49:    target += laplace_marginal(ll_function, (eta, log_ye, y),
    50:                                    theta_0,
    51:                                    K_function, (x, alpha, rho, rho, rho));
                                                       ^
    52:  }
   -------------------------------------------------

Cannot call 'K_function' with arguments forwarded from call to
'laplace_marginal':
Expected 4 arguments but got 5 arguments.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward5.stan
Semantic error in 'bad_forward5.stan', line 54, column 56 to column 80:
   -------------------------------------------------
    52:    vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
    53:                      theta_0,
    54:                      K_function, (x, n_obs, alpha, rho), (x, n_obs, alpha, {rho}));
                                                                 ^
    55:  }
   -------------------------------------------------

Cannot call 'K_function' with arguments forwarded from call to
'laplace_latent_rng':
The fourth argument must be real but got array[] real.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward6.stan
Semantic error in 'bad_forward6.stan', line 64, column 43 to column 54:
   -------------------------------------------------
    62:  
    63:  generated quantities {
    64:    vector[n_obs] theta = laplace_latent_rng(ll_function, (1,1, log_ye, y),
                                                    ^
    65:                      theta_0,
    66:                      K_function, (x, n_obs, alpha, rho));
   -------------------------------------------------

No unique minimum promotion found for function 'll_function'.
Overloaded functions must not have multiple equally valid promotion paths.
This function has several:
(vector, int, real, vector, array[] int) => real
(vector, real, int, vector, array[] int) => real
Consider defining a new signature for the exact types needed or
re-thinking existing definitions.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_forward_7.stan
Semantic error in 'bad_forward_7.stan', line 2, column 12 to column 65:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol_neg_binomial_2_log_lpmf(1, 1, 1);
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_tol_neg_binomial_2_log_lpmf'
for the likelihood:
The first argument must be array[] int but got int.
Expected the arguments to start with:
(array[] int, array[] int, vector)
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_theta0.stan
Semantic error in 'bad_theta0.stan', line 50, column 34 to column 41:
   -------------------------------------------------
    48:  
    49:    target += laplace_marginal(ll_function, (eta, log_ye, y),
    50:                                    theta_0,
                                           ^
    51:                                    K_function, (x, n_obs, alpha, rho));
    52:  }
   -------------------------------------------------

Initial guess argument to 'laplace_marginal' must be a vector.
Instead found type array[] real.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol1.stan
Semantic error in 'bad_tol1.stan', line 54, column 56 to column 57:
   -------------------------------------------------
    52:    vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
    53:                      theta_0,
    54:                      K_function, (x, n_obs, alpha, rho), 1);
                                                                 ^
    55:  }
   -------------------------------------------------

Recieved 1 extra argument at the end of the call to 'laplace_latent_rng'.
Did you mean to call the _tol version?
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol2.stan
Semantic error in 'bad_tol2.stan', line 54, column 80 to column 81:
   -------------------------------------------------
    52:    vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
    53:                      theta_0,
    54:                      K_function, (x, n_obs, alpha, rho), (x, n_obs, alpha, rho), 1,2,3,4,5);
                                                                                         ^
    55:  }
   -------------------------------------------------

Recieved 5 extra arguments at the end of the call to 'laplace_latent_rng'.
Did you mean to call the _tol version?
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol3.stan
Semantic error in 'bad_tol3.stan', line 54, column 80 to column 81:
   -------------------------------------------------
    52:    vector[n_obs] theta = laplace_latent_tol_rng(ll_function, (eta, log_ye, y),
    53:                      theta_0,
    54:                      K_function, (x, n_obs, alpha, rho), (x, n_obs, alpha, rho), 1,2,3,4);
                                                                                         ^
    55:  }
   -------------------------------------------------

Recieved 4 arguments at the end of the call to 'laplace_latent_tol_rng'.
Expected 5 arguments for the tolerances instead.
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol4.stan
Semantic error in 'bad_tol4.stan', line 58, column 32 to column 35:
   -------------------------------------------------
    56:                                  theta_0,
    57:                                  K_function, (x, n_obs, alpha, rho),
    58:                                  eta, max_num_steps, hessian_block_size,
                                         ^
    59:                                  solver, max_steps_line_search);
    60:  }
   -------------------------------------------------

The tolerance arguments to 'laplace_marginal_tol' must all be data-only,
but the first tolerance argument (tolerance) here is not. (Local variables
are assumed to depend on parameters; same goes for function inputs unless
they are marked with the keyword 'data'.)
[exit 1]
  $ ../../../../../install/default/bin/stanc bad_tol5.stan
Semantic error in 'bad_tol5.stan', line 54, column 80 to column 81:
   -------------------------------------------------
    52:    vector[n_obs] theta = laplace_latent_tol_rng(ll_function, (eta, log_ye, y),
    53:                      theta_0,
    54:                      K_function, (x, n_obs, alpha, rho), (x, n_obs, alpha, rho), 1,2,3,4,5.5);
                                                                                         ^
    55:  }
   -------------------------------------------------

The fifth tolerance argument (max_steps_line_search) to 'laplace_latent_tol_rng'
must be int but got real.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args1.stan
Semantic error in 'missing_args1.stan', line 2, column 12 to column 30:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal();
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal'.
The valid signature of this function is
laplace_marginal((vector, T1...) => real, tuple(T1...), vector,
  (T2...) => matrix, tuple(T2...))
However, we recieved the types:
()
We were unable to start more in-depth checking. Please ensure you are passing
enough arguments and and that the first argument is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args2.stan
Semantic error in 'missing_args2.stan', line 2, column 12 to column 34:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol();
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_tol'.
The valid signature of this function is
laplace_marginal_tol((vector, T1...) => real, tuple(T1...), vector,
  (T2...) => matrix, tuple(T2...), data real, data int, data int, data int,
  data int)
However, we recieved the types:
()
We were unable to start more in-depth checking. Please ensure you are passing
enough arguments and and that the first argument is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args3.stan
Semantic error in 'missing_args3.stan', line 2, column 12 to column 58:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol_neg_binomial_2_log_lpmf();
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_tol_neg_binomial_2_log_lpmf'
for the likelihood:
Expected 3 arguments but got 0 arguments.
Expected the arguments to start with:
(array[] int, array[] int, vector)
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args4.stan
Semantic error in 'missing_args4.stan', line 42, column 12 to line 43, column 42:
   -------------------------------------------------
    40:    eta ~ normal(0, 1);
    41:  
    42:    target += laplace_marginal(ll_function, (eta, log_ye, y),
                     ^
    43:                                    theta_0);
    44:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal'.
The valid signature of this function is
laplace_marginal((vector, T1...) => real, tuple(T1...), vector,
  (T2...) => matrix, tuple(T2...))
However, we recieved the types:
((vector, real, vector, array[] int) => real,
  tuple(real, vector, array[] int), data vector)
Typechecking failed after checking the first two arguments. Please ensure you
are passing enough arguments and that the fourth is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args5.stan
Semantic error in 'missing_args5.stan', line 65, column 24 to column 44:
   -------------------------------------------------
    63:  generated quantities {
    64:  
    65:    vector[n_obs] theta = laplace_latent_rng();
                                 ^
    66:  
    67:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_latent_rng'.
The valid signature of this function is
laplace_latent_rng((vector, T1...) => real, tuple(T1...), vector,
  (T2...) => matrix, tuple(T2...), tuple(T2...))
However, we recieved the types:
()
We were unable to start more in-depth checking. Please ensure you are passing
enough arguments and and that the first argument is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args6.stan
Semantic error in 'missing_args6.stan', line 65, column 22 to line 66, column 14:
   -------------------------------------------------
    63:  generated quantities {
    64:  
    65:  vector[n_obs] theta = laplace_latent_rng(ll_function, (eta, log_ye, y),
                               ^
    66:        theta_0);
    67:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_latent_rng'.
The valid signature of this function is
laplace_latent_rng((vector, T1...) => real, tuple(T1...), vector,
  (T2...) => matrix, tuple(T2...), tuple(T2...))
However, we recieved the types:
(data (vector, real, vector, array[] int) => real,
  tuple(real, vector, array[] int), data vector)
Typechecking failed after checking the first two arguments. Please ensure you
are passing enough arguments and that the fourth is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args7.stan
Semantic error in 'missing_args7.stan', line 65, column 24 to line 66, column 30:
   -------------------------------------------------
    63:  generated quantities {
    64:  
    65:    vector[n_obs] theta = laplace_latent_neg_binomial_2_log_rng(y, {1}, [1.0]',
                                 ^
    66:                        theta_0);
    67:  
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_latent_neg_binomial_2_log_rng'.
The valid signature of this function is
laplace_latent_neg_binomial_2_log_rng(array[] int, array[] int, vector,
  vector, (...) => matrix, tuple(...), tuple(...))
However, we recieved the types:
(data array[] int, data array[] int, data vector, data vector)
Typechecking failed after checking the first 3 arguments.
Please ensure you are passing enough arguments and that the 5th is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args8.stan
Semantic error in 'missing_args8.stan', line 2, column 12 to column 59:
   -------------------------------------------------
     1:  model {
     2:    target += laplace_marginal_tol_poisson_log_lpmf({1}, {1});
                     ^
     3:  }
   -------------------------------------------------

Ill-typed arguments supplied to function 'laplace_marginal_tol_poisson_log_lpmf'.
The valid signature of this function is
laplace_marginal_tol_poisson_log_lpmf(array[] int, array[] int, vector,
  (...) => matrix, tuple(...), data real, data int, data int, data int,
  data int)
However, we recieved the types:
(data array[] int, data array[] int)
Typechecking failed after checking the first 2 arguments.
Please ensure you are passing enough arguments and that the 4th is a function.
[exit 1]
  $ ../../../../../install/default/bin/stanc missing_args9.stan
Semantic error in 'missing_args9.stan', line 65, column 24 to line 66, column 67:
   -------------------------------------------------
    63:  generated quantities {
    64:  
    65:    vector[n_obs] theta = laplace_latent_tol_neg_binomial_2_log_rng(y, {1}, [1.0]',
                                 ^
    66:                        theta_0,  K_function, (x, n_obs, alpha, rho));
    67:  
   -------------------------------------------------

Recieved 0 argument at the end of the call to 'laplace_latent_tol_neg_binomial_2_log_rng'.
Expected 5 arguments for the tolerances instead.
[exit 1]
